--- a/Code+Data/app.ui
+++ b/Code+Data/app.ui
@@ -39,7 +39,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>-965</y>
+         <y>-718</y>
          <width>717</width>
          <height>1768</height>
         </rect>
@@ -952,7 +952,7 @@
                     <string>Adaptor Grammars binary file path</string>
                    </property>
                    <property name="text">
-                    <string>./py-cfg/py-cfg-mp</string>
+                    <string>../py-cfg/py-cfg-mp</string>
                    </property>
                   </widget>
                  </item>
